force-app/main/default/objects/BrokerPolicyLetter__mdt/BrokerPolicyLetter__mdt.object-meta.xml
<CustomObject>
    <label>BrokerPolicyLetter</label>
    <pluralLabel>BrokerPolicyLetters</pluralLabel>
</CustomObject>