force-app/main/default/objects/BrokerPolicyLetter__mdt/fields/Broker_Address__c.field-meta.xml
<CustomField>
    <fullName>Broker_Address__c</fullName>
    <label>Broker Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>